content spacing fixed

--- a/sentify/website/static/company.css
+++ b/sentify/website/static/company.css
@@ -82,7 +82,6 @@
     display: flex;
     flex-direction: column;
     flex: 0 0 70%;
-    justify-content: space-between;
 }
 
 .article-right {
@@ -143,42 +142,29 @@
 .article-source {
     font-size: 14px;
     color: #666; /* Medium gray */
-
 }
 
 .article-title {
-    margin-top: 10px;
+    padding-top: 15px;
     font-size: 24px;
     color: #333; /* Dark gray */
     margin-left: 10px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    line-height: 1.3; /* Adjust as needed */
-
+    line-height: 1.2;
 }
 
 .article-content {
     font-size: 16px;
     font-weight: 300;
-    margin: 10px 0 10px 10px;
-    line-height: 1.3; /* Adjust as needed */
+    margin: 15px 0 10px 10px;
+    line-height: 1.2; /* Adjust as needed */
     max-width: 90%;
-    display: -webkit-box;
-    -webkit-line-clamp: 7; /* Number of lines to display before truncating */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
     color: #3c3c3c;
 }
 
 .article-tags {
     display: flex;
     gap: 10px;
-    margin: 10px 0 10px 10px;
-    bottom: 0;
+    margin: auto 0 0 10px;
 }
 
 .tag {
